Componentes de entrenamiento Controllers + Put controllers in Entrenador and Ejercicios
* Put controller in Entrenador and Ejercicios checking null values + TODOs with use cases for controllers in componentes entrenamiento