@@ -1,15 +1,17 @@
 package aorquerab.fitnexus.controller;
 
+import aorquerab.fitnexus.model.componenteEntrenamiento.Ejercicio;
 import aorquerab.fitnexus.model.componenteEntrenamiento.Rutina;
 import aorquerab.fitnexus.model.dtos.componenteEntrenamientoDTO.RutinaDTO;
+import aorquerab.fitnexus.model.dtos.componenteEntrenamientoDTO.postman.EjerciciosListDTO;
 import aorquerab.fitnexus.model.dtos.componenteEntrenamientoDTO.postman.RutinaDtoRequest;
 import aorquerab.fitnexus.model.exception.EntrenadorNotFoundException;
 import aorquerab.fitnexus.model.exception.InvalidRequestException;
 import aorquerab.fitnexus.model.exception.RutinaNotFoundException;
 import aorquerab.fitnexus.model.users.Entrenador;
+import aorquerab.fitnexus.repository.EjercicioRepository;
 import aorquerab.fitnexus.repository.EntrenadorRepository;
 import aorquerab.fitnexus.repository.RutinaRepository;
-import aorquerab.fitnexus.utils.RutinaDTOMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -28,10 +30,12 @@ import static aorquerab.fitnexus.constants.Constants.FITNEXUS_BASE_URI;
 public class RutinaController {
     private final RutinaRepository rutinaRepository;
     private final EntrenadorRepository entrenadorRepository;
+    private final EjercicioRepository ejercicioRepository;
 
-    public RutinaController(RutinaRepository rutinaRepository, EntrenadorRepository entrenadorRepository) {
+    public RutinaController(RutinaRepository rutinaRepository, EntrenadorRepository entrenadorRepository, EjercicioRepository ejercicioRepository) {
         this.rutinaRepository = rutinaRepository;
         this.entrenadorRepository = entrenadorRepository;
+        this.ejercicioRepository = ejercicioRepository;
     }
 
     @GetMapping
@@ -71,13 +75,20 @@ public class RutinaController {
     @GetMapping ("/{idRutina}")
     public ResponseEntity<RutinaDTO> obtenerRutinaPorId (@PathVariable Long idRutina) {
         log.info("Ejecutando obtenerRutinaPorId con el id: " + idRutina);
-        RutinaDTO rutinaDTO = rutinaRepository.findById(idRutina)
-                .map(RutinaDTOMapper::mapperFromRutina) //TODO: Pending mapper
-                .orElseThrow( ()-> {
+        Rutina rutina = rutinaRepository.findById(idRutina)
+                .orElseThrow(() -> {
                     log.warn("Rutina no encontrada en base de datos: " + idRutina);
                     return new RutinaNotFoundException("Rutina no encontrada en BD: "
                             + idRutina);
                 });
+        RutinaDTO rutinaDTO = RutinaDTO.builder()
+                .nombreRutina(rutina.getNombreRutina())
+                .ejercicios(rutina.getEjercicios().stream()
+                        .map(ejercicio -> RutinaDTO.EjercicioDTO.builder()
+                                .nombreEjercicio(ejercicio.getNombreEjercicio())
+                                .build())
+                            .collect(Collectors.toList()))
+                    .build();
         return ResponseEntity.status(HttpStatus.OK).body(rutinaDTO);
     }
 
@@ -91,8 +102,15 @@ public class RutinaController {
             throw new RutinaNotFoundException("Rutina no encontrada en BD: " + nombreRutina);
         }
         List<RutinaDTO> rutinaDTOList = rutinasList.stream()
-                .map(RutinaDTOMapper::mapperFromRutina)
-                .toList();//TODO: Pending mapper
+                .map(rutina -> RutinaDTO.builder()
+                        .nombreRutina(rutina.getNombreRutina())
+                        .ejercicios(rutina.getEjercicios().stream()
+                                .map(ejercicio -> RutinaDTO.EjercicioDTO.builder()
+                                        .nombreEjercicio(ejercicio.getNombreEjercicio())
+                                        .build())
+                                .collect(Collectors.toList()))
+                        .build())
+                .toList();
         return ResponseEntity.status(HttpStatus.OK).body(rutinaDTOList);
     }
 
@@ -100,13 +118,11 @@ public class RutinaController {
     @PostMapping
     public ResponseEntity<String> crearRutina(@RequestBody RutinaDtoRequest rutinaDtoRequest) {
         log.info("Ejecutando crearRutina con este rutinaDtoRequest: " + rutinaDtoRequest);
-        if(rutinaDtoRequest == null) {
+        if(rutinaDtoRequest == null)
             throw new InvalidRequestException("Peticion de rutina no valida");
-        }
-
         String entrenadorEmail = rutinaDtoRequest.getEntrenador().getEmail();
         Optional <Entrenador> entrenadorFromRepository = entrenadorRepository.findByEmail(entrenadorEmail);
-        Rutina rutinaCreada = null;
+        Rutina rutinaCreada;
         if (entrenadorFromRepository.isPresent()) {
             rutinaCreada = Rutina.builder()
                     .nombreRutina(rutinaDtoRequest.getNombreRutina())
@@ -121,27 +137,39 @@ public class RutinaController {
         return ResponseEntity.status(HttpStatus.CREATED).body("Rutina creada correctamente en BD");
     }
 
-    //TODO: No puedes crear una rutina en base a RutinaDTO, ahi hay una lista de ejercicios
-    // tienes que poder crear una rutina con un nombreRutina, fecha inicio, fecha fin
-    // y posteriormente añadir ejercicios a una rutina concreta
+    //TODO: POST Controller
+    // Añadir ejercicios existentes
+    // (en una lista con muchos o 1 ejercicio, enviando idEjercicio o nombreEjercicio)
+    // a una rutina existente (necesitaremos el nombre de la rutina)
+    // Para añadirEjercicios EN UNA LISTA DE EJERCICIOS a una rutina
+    // puede ser util, sacar a un servicio la logica de obtenerEjercicioPorId para usarlo aqui tambien
+    @PostMapping("/{nombreRutina}")
+    public ResponseEntity<String> addEjerciciosEnLista (
+            @PathVariable String nombreRutina,
+            @RequestBody EjerciciosListDTO ejerciciosListDTO) {
+        log.info("Ejecutando addEjerciciosEnLista con esta lista de ejerciciosDTO: " + ejerciciosListDTO);
+        List<EjerciciosListDTO.EjercicioDTO> ejerciciosDTO = ejerciciosListDTO.getEjercicios();
+        List<Ejercicio> ejercicios = EjerciciosListDTO.builder().build();
+        Rutina rutina = Rutina.builder()
+                .ejercicios(ejercicios)
+                .build();
+        //TODO REVIEW
+        //Tengo una lista de ejercicios con solo el nombre List<EjercicioDTO> ejercicios y un nombreRutina;
+        //Creo una rutina de BD que contenga los ejercicios de la lista y NADA MAS?
 
-    //TODO: De la misma forma tienes que poder asignar un PLAN X a distintos usuarios
-    // usando rutinas existentes
-
-    //TODO EJ: rutinaTorso tiene (press banca (id=1, nombre=pb) y dominadas (id=2, nombre= dom)
-    // a su vez rutinaTorso tiene (id=3, nombreRutina= rutinaTorso)
-    // y habrá un planNavidad que contenga (rutinaTorso y rutinaPierna(id(5)),
-    // aparte de (id=4, nombrePlan= planNavidad)
-
-    //TODO: de esta forma puedes crear nuevos planVerano con rutinaPierna(id(5)) + rutinaTorso(id(4))
-    // o planPrimavera con rutinaPierna(id(5)) + rutinaTorso(id(4)) + rutinaCrossfit(id(7))
-
-    //TODO: añadir ejemplos con small JSONs o incluso preparar las peticiones en POSTMAN :)
+    }
 
 
-    //TODO: Testear con postman
-    @PostMapping
-    public ResponseEntity<String> añadirEjercicio {}
-    //TODO: Debería estar en ejercicioController?
+    //TODO: DELETE Controller
+    // para eliminar una lista de ejercicios
+
+    //TODO: PUT Controller
+    // para modificar datos de una rutina (nombre o fechas)
+
+    //TODO: DELETE controller
+    // para eliminar un ejercicio de una rutina
+
+    //TODO: DELETE controller
+    // Para borrar una rutina
 
 }
